# sales-forecasting-dashboard

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: FORECASTING.md
forecasting/: __init__.py  config.py  data.py  features.py  forecast.py  powerbi.py
notebooks/: 01_sales_forecasting.ipynb
outputs/: forecast.csv  forecast_metrics.json
powerbi/: MODEL.md  dax_measures.dax
scripts/: prepare_data.py  push_to_powerbi.py  train_forecast.py
tests/: conftest.py  test_data.py  test_features.py  test_forecast.py  test_powerbi.py
