[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecasting-dashboard"
version = "0.1.0"
description = "Superstore sales forecasting with Prophet, a Streamlit dashboard and a Power BI report"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kirill Streltsov" }]

[tool.setuptools]
packages = ["forecasting"]

[tool.ruff]
line-length = 88
target-version = "py312"
# Notebooks use IPython magics and imports-after-magic by design.
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Third-party deprecation noise (cmdstanpy / pandas internals).
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
